fix flickering animation

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,23 @@ body {
   /* background-color: #4d6379; */
 }
 
+.title {
+  font-size: clamp(16px, 0.5rem + 2vw, 76px);
+  text-align: center;
+  line-height: 1.3;
+  color: #603e18;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
+}
+
+.text {
+  font-size: clamp(14px, 0.5rem + 1vw, 64px);
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  /* color: #f9f6ed; */
+  color: #212120;
+  text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.15);
+}
+
 .wrapper {
   position: relative;
   min-height: 100dvh;
@@ -77,7 +94,6 @@ body {
   height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
-  filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.35));
   /* -webkit-filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.15)) contrast(1.1); */
   /* -moz-filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.15)) contrast(1.1); */
 }
@@ -94,22 +110,52 @@ body {
 
 @keyframes flickering-lights {
   0% {
-    filter: contrast(1.5);
+    filter: contrast(1.4)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.7));
+    -webkit-filter: contrast(1.4)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.7));
+    -moz-filter: contrast(1.4)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.7));
   }
   15% {
-    filter: contrast(0.8);
+    filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -webkit-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -moz-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
   }
   45% {
-    filter: contrast(0.8);
+    filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -webkit-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -moz-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
   }
   60% {
-    filter: contrast(1.35);
+    filter: contrast(1.3)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.65));
+    -webkit-filter: contrast(1.3)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.65));
+    -moz-filter: contrast(1.3)
+      drop-shadow(0 0 max(7px, 1.2vw) rgba(255, 255, 192, 0.65));
   }
   70% {
-    filter: contrast(0.8);
+    filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -webkit-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
+    -moz-filter: contrast(0.8)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.15));
   }
   100% {
-    filter: contrast(0.8);
+    filter: contrast(0.85)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.2));
+    -webkit-filter: contrast(0.85)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.2));
+    -moz-filter: contrast(0.85)
+      drop-shadow(0 0 max(4px, 0.1vw) rgba(255, 255, 192, 0.2));
   }
 }
 
@@ -153,7 +199,7 @@ body {
 
 .logo__text {
   font-family: 'Chervil', sans-serif;
-  font-size: clamp(30px, 0.5rem + 6vw, 120px);
+  font-size: clamp(30px, 0.75rem + 6vw, 120px);
   color: #000000;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
 }
@@ -195,12 +241,6 @@ body {
 }
 
 .info__title {
-  font-size: clamp(16px, 0.5rem + 2vw, 76px);
-  /* font-weight: 700; */
-  text-align: center;
-  line-height: 1.3;
-  color: #603e18;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 
 .info__list {
@@ -222,14 +262,14 @@ body {
   align-items: center;
   justify-items: center;
 
-  background: rgba(255, 255, 255, 0.15);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.2);
+  border: max(1px, 0.1vw) solid rgba(255, 255, 255, 0.3);
   border-radius: max(16px, 1vw);
 
-  overflow: hidden;
   box-shadow: 0 max(4px, 0.5vw) max(10px, 1.2vw) rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(max(3px, 0.35vw));
-  -webkit-backdrop-filter: blur(max(3px, 0.35vw));
+  backdrop-filter: blur(max(2px, 0.3vw));
+  -webkit-backdrop-filter: blur(max(2px, 0.3vw));
+  overflow: hidden;
 }
 .info__item:hover .info__item-icon-box {
   transform: scale(1.15);
@@ -238,7 +278,7 @@ body {
   content: '';
   position: absolute;
   top: -20%;
-  left: -100%;
+  left: -150%;
   height: 140%;
   width: 100%;
   background: rgba(255, 255, 255, 0.13);
@@ -254,7 +294,7 @@ body {
 }
 .info__item:hover:after {
   left: 120%;
-  transition-duration: 0.7s, 0.7s, 0.15s;
+  transition-duration: 0.8s, 0.8s, 0.2s;
   transition-property: left, top, opacity;
   transition-timing-function: ease-in-out;
   opacity: 1;
@@ -308,13 +348,61 @@ body {
   text-align: center;
 }
 
-.text {
-  font-size: clamp(14px, 0.5rem + 1vw, 64px);
-  line-height: 1.3;
+.page__form {
+  margin-top: max(80px, 7vw);
+}
+
+.form {
+}
+
+.form__body {
+  margin: 0 auto;
+  padding: max(25px, 3vw) max(15px, 2vw);
+  width: min(800px, 90%);
+
+  background: rgba(255, 255, 255, 0.3);
+  border: max(1px, 0.2vw) solid rgba(255, 255, 255, 0.35);
+  border-radius: max(16px, 1vw);
+
+  backdrop-filter: blur(max(3px, 0.35vw));
+  -webkit-backdrop-filter: blur(max(3px, 0.35vw));
+}
+
+.form__title {
+  margin-bottom: max(30px, 5vw);
+}
+
+.form__label {
+  font-size: clamp(16px, 0.5rem + 1vw, 68px);
+  line-height: 1.15;
   letter-spacing: 0.5px;
   /* color: #f9f6ed; */
   color: #212120;
   text-shadow: 1px 0px 1px rgba(0, 0, 0, 0.15);
+}
+
+.form__input-box {
+  position: relative;
+  height: max-content;
+}
+.form__input-box::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.form__input {
+  padding: 5px 7px;
+  /* font-family: 'AGOpus Cyrillic', sans-serif; */
+  font-size: clamp(14px, 0.5rem + 1vw, 60px);
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.form__custom-select {
 }
 
 .footer {
